Add user authentifications

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,11 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            form_login:
+                # login_path значение в нем указывается на страницу авторизации
+                login_path: app_login
+                # маршрут, по которому все учетные данные будут отправлены с этого форума для проверки
+                check_path: app_login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
