Создание разных юзер ролей

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,8 +37,15 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/micro-post, roles: ROLE_USER }
+        # - { path: ^/micro-post, roles: ROLE_USER }
         # - { path: ^/profile, roles: ROLE_USER }
+
+    # Строчки ниже гласят о следующем роль админ включает в себя все права, что роль едитор, роль комментер и роль юзер
+    # Роли юзерам мы можем задать в колонке roles таблицы user (adminer)
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_EDITOR]
+        ROLE_EDITOR: [ROLE_COMMENTER]
+        ROLE_COMMENTER : [ROLE_USER]
 
 when@test:
     security:
