Делаем поле регистрации пользователя

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,9 @@ services:
     restart: always
     ports:
       - 8080:8080
-  
+
+  mailer:
+    image: schickling/mailcatcher
+    ports:
+      - 1080:1080 # по адресу localhost и данный номер порта мы сможем увидеть панель со всеми емейлами отправленными с нашего приложения
+      - 1025:1025
