--- a/.env
+++ b/.env
@@ -27,3 +27,7 @@ APP_SECRET=1b0ce89ae31cbcf944f30d4c3b354c70
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 DATABASE_URL="mysql://root:root@127.0.0.1:3307/symf6-hands-on?serverVersion=mariadb-10.8.3&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://0.0.0.0:1025
+###< symfony/mailer ###
