--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,6 +2,10 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     form_themes:
         - 'form/fields.html.twig'
+    globals:
+        # Передаем переменную proflies из services.yaml для того чтобы она была доступна во всем шаблоне
+        profiles: '%profiles%'
+
 
 when@test:
     twig:
